--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,24 +10,34 @@
   "background_color": "#f8fafc",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%234f46e5' width='192' height='192'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='100' font-weight='bold' fill='white' font-family='Arial'>FB</text></svg>",
+      "src": "/inaeFlexbook/favicon.svg",
+      "sizes": "64x64",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/inaeFlexbook/icon-192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect fill='%234f46e5' width='512' height='512'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='300' font-weight='bold' fill='white' font-family='Arial'>FB</text></svg>",
+      "src": "/inaeFlexbook/icon-192.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/inaeFlexbook/icon-512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
+      "purpose": "any"
+    },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 540 720'><rect fill='%23f8fafc' width='540' height='720'/><rect fill='%234f46e5' width='540' height='100'/><text x='270' y='50' dominant-baseline='middle' text-anchor='middle' font-size='40' font-weight='bold' fill='white'>FlexBook</text></svg>",
-      "sizes": "540x720",
+      "src": "/inaeFlexbook/icon-512.svg",
+      "sizes": "512x512",
       "type": "image/svg+xml",
-      "form_factor": "narrow"
+      "purpose": "maskable"
     }
   ],
   "categories": ["finance", "productivity"],
@@ -39,8 +49,8 @@
       "url": "/inaeFlexbook/?action=add",
       "icons": [
         {
-          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect fill='%234f46e5' width='96' height='96'/><text x='48' y='48' dominant-baseline='middle' text-anchor='middle' font-size='60' font-weight='bold' fill='white'>+</text></svg>",
-          "sizes": "96x96",
+          "src": "/inaeFlexbook/icon-192.svg",
+          "sizes": "192x192",
           "type": "image/svg+xml"
         }
       ]
@@ -52,8 +62,8 @@
       "url": "/inaeFlexbook/statistics",
       "icons": [
         {
-          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect fill='%234f46e5' width='96' height='96'/><text x='48' y='48' dominant-baseline='middle' text-anchor='middle' font-size='50' font-weight='bold' fill='white'>📊</text></svg>",
-          "sizes": "96x96",
+          "src": "/inaeFlexbook/icon-192.svg",
+          "sizes": "192x192",
           "type": "image/svg+xml"
         }
       ]
