--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,8 +6,8 @@
   "scope": "/inaeFlexbook/",
   "display": "standalone",
   "orientation": "portrait-primary",
-  "theme_color": "#4f46e5",
-  "background_color": "#f8fafc",
+  "theme_color": "#0a66ff",
+  "background_color": "#f7f6f5",
   "icons": [
     {
       "src": "/inaeFlexbook/favicon.svg",
