--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dexie": "^4.2.1",
+    "firebase": "^12.8.0",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "^3.7.0",
-    "lucide-react": "^0.563.0",
     "react-router-dom": "^7.12.0",
-    "dexie": "^4.2.1"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
