--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "FlexBook - Professional Household Finance",
   "short_name": "FlexBook",
   "description": "A professional household account book with real-time tracking, statistics, and project management.",
-  "start_url": "/inaeFlexbook/",
+  "start_url": "./",
   "scope": "/inaeFlexbook/",
   "display": "standalone",
   "orientation": "portrait-primary",
@@ -10,19 +10,19 @@
   "background_color": "#f7f6f5",
   "icons": [
     {
-      "src": "/inaeFlexbook/favicon.svg",
+      "src": "./favicon.svg",
       "sizes": "64x64",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/inaeFlexbook/icon-192.svg",
+      "src": "./icon-192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/inaeFlexbook/icon-512.svg",
+      "src": "./icon-512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any"
